2010-01-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update documentation for installer.

	* deploy/README: Simplify.
	* deploy/installer/README: New.

2010-01-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Capture distribution stuff into own directory.

	* deploy/common.mk,
	* deploy/dist-common.mk,
	* deploy/binutils-dist.mk,
	* deploy/gcc-dist.mk,
	* deploy/m4-dist.mk,
	* deploy/sc-dist.mk,
	* deploy/slc-dist.mk,
	* deploy/mgsim-dist.mk,
	* deploy/mggcc-dist.mk: Rename to...

	* deploy/dist/common.mk,
	* deploy/dist/dist-common.mk,
	* deploy/dist/binutils-dist.mk,
	* deploy/dist/gcc-dist.mk,
	* deploy/dist/m4-dist.mk,
	* deploy/dist/sc-dist.mk,
	* deploy/dist/slc-dist.mk,
	* deploy/dist/mgsim-dist.mk,
	* deploy/dist/mggcc-dist.mk: ... here.

	* deploy/dist/patches: Alias ../patches.

2010-01-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Support more compilers in SystemC.

	* deploy/patches/sysc.patch: Add support for GNU C++ installations
	where `g++' has a suffix. (e.g. g++-mp-4.4)

2010-01-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Remove deployment rules for TinyXML.

	TinyXML is not used any more by MGSim, so it needs not be
	installed any more either.

	* deploy/tinyxml/.gitignore,
	* deploy/tinyxml/Makefile.am,
	* deploy/tinyxml/configure.ac,
	* deploy/tinyxml/bootstrap,
	* deploy/rules/tx.mk: Remove.

2010-01-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Separate installer into independent package.

	* deploy/installer/configure.ac: New.

	* deploy/Makefile: Rename to...

	* deploy/installer/Makefile.am: ... here. Use GNU make features
	where appropriate. Define $(UNTAR) to allow for multiple
	compression methods.

	* deploy/versions.mk.defaults: Rename to...
	* deploy/installer/versions.mk.defaults: ... here. Simplify.

	* deploy/rules/binutils.mk,
	* deploy/rules/m4.mk,
	* deploy/rules/sc.mk,
	* deploy/rules/mgsim.mk,
	* deploy/rules/mggcc.mk,
	* deploy/rules/slc.mk,
	* deploy/rules/gcc.mk: Rename to...

	* deploy/installer/rules/binutils.mk,