@@ -20,10 +20,11 @@ AM_INIT_AUTOMAKE([1.11 tar-ustar no-define foreign dist-bzip2])
 SLC_PATH_LOCAL([slc])
 AC_WITH_SLC
 
-AC_CONFIG_FILES([Makefile])
+AC_CONFIG_FILES([Makefile deploy/Makefile])
 AC_CONFIG_SUBDIRS([slc])
 AC_CONFIG_SUBDIRS([tests])
 AC_CONFIG_SUBDIRS([programs])
+AC_CONFIG_SUBDIRS([deploy/installer])
 
 AC_OUTPUT
 
