@@ -1,0 +1,2 @@
+# This file is only used by the top-level sl-base package.
+SUBDIRS = installer
